[package]
name = "pomo-nrf"
edition = "2021"
version = "0.1.0"
publish = false

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
nrf52840-hal = "0.17.1"
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
embedded-hal = "1.0.0"
fugit = { version = "0.3.7", features = ["defmt"] }
rtic-monotonics = { version = "1.5.0", features = ["nrf52840"] }
rtic-sync = "1.3.0"

[dev-dependencies]
defmt-test = "0.3.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
